<resources>
    <string name="app_name">AndroidPosts</string>
    <string name="posts_button">Login</string>
    <string name="create_post_button">Create post</string>
    <string name="read_post_button">Read post</string>
    <string name="settings_button">Settings</string>
    <string name="posts_label">Posts </string>
    <string name="login_label">Android post </string>
    <string name="create_label">Create post </string>
    <string name="read_label">Read post </string>
    <string name="settings_label">Settings </string>
    <string name="settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="log_out">Log out</string>
    <string name="oops">Ooops</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort_post">Sort post</string>
    <string name="sort_post_key">sort_post_key</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="posts_by_date_summary">Sort posts by date</string>
    <string name="prefer_sort_post_date_key">prefer_sort_post_date_key</string>
    <string name="Sort_by_popularity">Sort by popularity</string>
    <string name="Sort_posts_by_popularity">Sort posts by popularity</string>
    <string name="sort_post_popularity_key">sort_post_popularity_key</string>
    <string name="Sort_comments">Sort comment</string>
    <string name="sort_comments_key">sort_comments_key</string>
    <string name="sort_comment_by_date">Sort comment by date</string>
    <string name="sort_comment_date_key">sort_comment_date_key</string>
    <string name="sort_comments_by_popularity">Sort comments by popularity</string>
    <string name="sort_comment_popularity_key">sort_comment_popularity_key</string>

</resources>
