<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nemanja97.androidposts.PostsActivity">

    <Button
        android:id="@+id/createPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_post_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="createPostClick"/>

    <Button
        android:id="@+id/readPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_post_button"
        app:layout_constraintStart_toStartOf="@+id/createPostButton"
        app:layout_constraintTop_toBottomOf="@+id/createPostButton"
        android:onClick="readPostClick"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        app:layout_constraintStart_toStartOf="@+id/readPostButton"
        app:layout_constraintTop_toBottomOf="@+id/readPostButton"
        android:onClick="settingClick"/>
</android.support.constraint.ConstraintLayout>
